[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/UI/Options/Settings.gd" type="Script" id=1]

[node name="Settings" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0
script = ExtResource( 1 )

[node name="Main" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Row1" type="VBoxContainer" parent="Main"]
margin_right = 338.0
margin_bottom = 662.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Updating" type="VBoxContainer" parent="Main/Row1"]
margin_right = 338.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Main/Row1/Updating"]
margin_right = 338.0
margin_bottom = 14.0
text = "Updating"
align = 1

[node name="HSeparator" type="HSeparator" parent="Main/Row1/Updating"]
margin_top = 18.0
margin_right = 338.0
margin_bottom = 22.0

[node name="UpdateCheck" type="CheckBox" parent="Main/Row1/Updating"]
margin_top = 26.0
margin_right = 338.0
margin_bottom = 50.0
text = "Check for updates on start"

[node name="Row2" type="VBoxContainer" parent="Main"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 662.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="VBoxContainer" parent="Main/Row2"]
margin_right = 338.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="Main/Row2/Options"]
margin_right = 338.0
margin_bottom = 14.0
text = "Misc"
align = 1

[node name="HSeparator" type="HSeparator" parent="Main/Row2/Options"]
margin_top = 18.0
margin_right = 338.0
margin_bottom = 22.0

[node name="Row3" type="VBoxContainer" parent="Main"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 662.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Video" type="VBoxContainer" parent="Main/Row3"]
margin_right = 340.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="Main/Row3/Video"]
margin_right = 340.0
margin_bottom = 14.0
text = "Video"
align = 1

[node name="HSeparator" type="HSeparator" parent="Main/Row3/Video"]
margin_top = 18.0
margin_right = 340.0
margin_bottom = 22.0

[node name="Resolution" type="HBoxContainer" parent="Main/Row3/Video"]
margin_top = 26.0
margin_right = 340.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="Main/Row3/Video/Resolution"]
margin_top = 3.0
margin_right = 72.0
margin_bottom = 17.0
text = "Resolution:"

[node name="Resolution" type="MenuButton" parent="Main/Row3/Video/Resolution"]
margin_left = 76.0
margin_right = 340.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "1366 x 768"
align = 0

[node name="VSync" type="CheckButton" parent="Main/Row3/Video"]
margin_top = 50.0
margin_right = 340.0
margin_bottom = 90.0
text = "VSync"

[node name="ModelQuality" type="HBoxContainer" parent="Main/Row3/Video"]
margin_top = 94.0
margin_right = 340.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="Main/Row3/Video/ModelQuality"]
margin_top = 3.0
margin_right = 94.0
margin_bottom = 17.0
text = "Model Quality:"

[node name="Quality" type="MenuButton" parent="Main/Row3/Video/ModelQuality"]
margin_left = 98.0
margin_right = 139.0
margin_bottom = 20.0
text = "High"
align = 0
items = [ "Low", null, 0, false, false, -1, 0, null, "", false, "Medium", null, 0, false, false, -1, 0, null, "", false, "High", null, 0, false, false, -1, 0, null, "", false ]

[node name="FPSLimit" type="HBoxContainer" parent="Main/Row3/Video"]
margin_top = 118.0
margin_right = 340.0
margin_bottom = 142.0

[node name="Label" type="Label" parent="Main/Row3/Video/FPSLimit"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "FPS limit:"

[node name="FPSSlider" type="HSlider" parent="Main/Row3/Video/FPSLimit"]
margin_left = 64.0
margin_right = 262.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 24.0
max_value = 140.0
value = 24.0
ticks_on_borders = true

[node name="FPSSpin" type="SpinBox" parent="Main/Row3/Video/FPSLimit"]
margin_left = 266.0
margin_right = 340.0
margin_bottom = 24.0
min_value = 24.0
max_value = 140.0
value = 24.0
[connection signal="pressed" from="Main/Row1/Updating/UpdateCheck" to="." method="_on_UpdateCheck_pressed"]
[connection signal="value_changed" from="Main/Row3/Video/FPSLimit/FPSSlider" to="." method="_on_FPSSlider_value_changed"]
[connection signal="value_changed" from="Main/Row3/Video/FPSLimit/FPSSpin" to="." method="_on_FPSSpin_value_changed"]
